# synapse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  prometheus.yml
.husky/: pre-commit
perf/: Cargo.toml  Dockerfile  README.md  concurrent_connections.rs  docker-compose.yml
perf/src/: connections.rs  main.rs  messages.rs
src/: auth.rs  channel.rs  connection.rs  lib.rs  main.rs  message.rs  metrics.rs  server.rs
src/api/: channels.rs
src/channel/: map.rs  mod.rs  router.rs  storage.rs  store.rs
src/ws/: compat.rs  handshake.rs  mod.rs  upgrade.rs
tests/: channel_tests.rs
