[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
default-run = "synapse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
env_logger = "0.10.0"
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
hyper = "0.14.26"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.19.0"
bytes = "1.4.0"
tokio-stream = "0.1"
lazy_static = "1.4.0"
rocksdb = "0.20"
reqwest = { version = "0.11.17", features = ["json"] }
bincode = "1.3.3"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "perf_concurrent_connections"
path = "perf/concurrent_connections.rs"
