[package]
name = "synapse-perf-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
hyper = "0.14.26"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.19.0"
bytes = "1.4.0"
tokio-stream = "0.1"
